Fix upload and train page height on smaller screens

--- a/ui/src/app/pages/home/home.page.scss
+++ b/ui/src/app/pages/home/home.page.scss
@@ -5,9 +5,12 @@
 
 ::ng-deep {
     mat-horizontal-stepper,
-    .mat-horizontal-content-container,
     .mat-horizontal-stepper-content {
         height: 100%;
+    }
+
+    .mat-horizontal-content-container {
+        height: calc(100% - 10px);
     }
 
     .mat-horizontal-stepper-content {
